@startuml

title __CECS277MIDTERM1's Class Diagram__\n

  namespace  {
    namespace ECS277Midterm1 {
      class CECS277Midterm1.CargoShip {
          - tonnage : int
          + CargoShip()
          + getCargoCapacity()
          + setCargoCapacity()
          + toString()
      }
    }
  }
  

  namespace  {
    namespace ECS277Midterm1 {
      class CECS277Midterm1.CruiseShip {
          - maxPassengers : int
          + CruiseShip()
          + getNumPassengers()
          + setNumPassengers()
          + toString()
      }
    }
  }
  

  namespace  {
    namespace ECS277Midterm1 {
      class CECS277Midterm1.MainClass {
          {static} + main()
      }
    }
  }
  

  namespace  {
    namespace ECS277Midterm1 {
      class CECS277Midterm1.Ship {
          - name : String
          - year : int
          + Ship()
          + Ship()
          + compareTo()
          + getName()
          + getYear()
          + setName()
          + setYear()
          + toString()
      }
    }
  }
  

  CECS277Midterm1.CargoShip -up-|> CECS277Midterm1.Ship
  CECS277Midterm1.CruiseShip -up-|> CECS277Midterm1.Ship
  CECS277Midterm1.Ship .up.|> java.lang.Comparable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
